--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
     </header>
     <section class="about-section text-center" id="about">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center"> <!-- Adding justify-content-center to center the content -->
                 <div class="col-lg-4 my-0">
-                    <div class="sticky-top" id="cv-summary">
+                    <div class="sticky-top text-center" id="cv-summary"> <!-- Adding text-center to center the content within the div -->
                         <img class="rounded-circle img-fluid" id="avatar" src="Personal_Photo.jpeg" />
                         <h2>About Vispi</h2>
                         <div class="men">
