--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
         }
 
         .edu-item {
-            border: 1px solid #e0e0e0; /* Add a border to the boxes */
+            border: 1px solid #ffffff; /* White border */
             padding: 20px;             /* Add some padding inside the boxes */
             margin-bottom: 20px;       /* Add some margin between the boxes */
             border-radius: 10px;       /* Round the corners of the boxes */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle shadow to the boxes */
-            background-color: #f9f9f9; /* Add a background color to the boxes */
+            background-color: transparent; /* Transparent background */
         }
+
 
     </style>
 </head>
