--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             border-bottom: none;
         }
     
-        .edu-item h3, .edu-item h4 {
+a        .edu-item h3, .edu-item h4 {
             margin-bottom: .5rem;
         }
         #cv-summary {
@@ -136,6 +136,9 @@
             margin-bottom: 20px;       /* Add some margin between the boxes */
             border-radius: 10px;       /* Round the corners of the boxes */
             background-color: transparent; /* Transparent background */
+        }
+        .smaller-text {
+            font-size: 0.85rem; /* Reduce the font size, you can adjust this value */
         }
 
 
@@ -236,7 +239,7 @@
                             </div>
                         </div>
                     </section>
-                    <section class="about-section text-center" id="projects">
+                    <section class="about-section text-center smaller-text" id="projects">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-14 mx-auto">
@@ -281,7 +284,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section class="about-section text-center" id="pubs">
+                        <section class="about-section text-center smaller-text" id="pubs">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-12 mx-auto"> <!-- Changed col-lg-14 to col-lg-12 as Bootstrap grid supports up to 12 columns -->
@@ -315,7 +318,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section class="about-section text-center" id="confPapers">
+                        <section class="about-section text-center smaller-text" id="confPapers">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-12 mx-auto">
