--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@ a        .edu-item h3, .edu-item h4 {
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#pubs">Publications</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#foot">Links</a></li>
                 </ul>
             </div>
