--- a/blog.html
+++ b/blog.html
@@ -80,6 +80,19 @@
             align-items: center;
             background: #222;
         }
+
+        .blog-content {
+            color: #000; /* Black color */
+        }
+    
+        .blog-content h2, .blog-content h3 {
+            color: #000; /* Black color for headings */
+        }
+    
+        .blog-content p.lead {
+            color: #000; /* Black color for lead paragraph */
+        }
+
     </style>
 </head>
 
@@ -105,11 +118,10 @@
 </nav>
 
 <!-- Blog Content -->
-<section class="mt-5 pt-5">
+<section class="mt-5 pt-5 blog-content">
     <div class="container">
         <h2>Leveraging Large Language Models and Prompt Engineering for Engineering Design</h2>
         <p class="lead">Published: August 21, 2023 | Author: Vispi Nevile Karkaria</p>
-        <img src="path-to-your-image.jpg" alt="Image related to the blog topic" class="img-fluid rounded mb-4">
         <p>
             With the advent of large-scale machine learning models, we are witnessing a transformative phase in various sectors. Engineering design, a field previously reliant on meticulous manual inputs, has embraced the potential of large language models (LLMs) for a more streamlined approach.
         </p>
