--- a/blog.html
+++ b/blog.html
@@ -122,7 +122,7 @@
         <div class="blog-list mt-4">
             <!-- Example Blog Item (You'd repeat this structure for each blog entry) -->
             <div class="blog-item" data-date="2023-08-20">
-                <h3><a href="Leveraging Large Language Models and Prompt Engineering for Engineering Design.html">Leveraging Large Language Models and Prompt Engineering for Engineering Design</a></h3>
+                <h3><a href="blogs/Leveraging Large Language Models and Prompt Engineering for Engineering Design.html">Leveraging Large Language Models and Prompt Engineering for Engineering Design</a></h3>
                 <p class="text-muted smaller-text">Published: August 20, 2023</p>
                 <hr>
             </div>
