--- a/blogs/Leveraging Large Language Models and Prompt Engineering for Engineering Design.html
+++ b/blogs/Leveraging Large Language Models and Prompt Engineering for Engineering Design.html
@@ -96,21 +96,20 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="index.html">HOME</a>
+        <a class="navbar-brand js-scroll-trigger" href="../index.html">HOME</a> <!-- Adjusted Path -->
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html#about">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html#pubs">Publications</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html#projects">Projects</a></li>
-                <li class="nav-item active"><a class="nav-link" href="blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html#foot">Links</a></li>
+                <li class="nav-item"><a class="nav-link" href="../index.html#about">About</a></li> <!-- Adjusted Path -->
+                <li class="nav-item"><a class="nav-link" href="../index.html#pubs">Publications</a></li> <!-- Adjusted Path -->
+                <li class="nav-item"><a class="nav-link" href="../index.html#projects">Projects</a></li> <!-- Adjusted Path -->
+                <li class="nav-item active"><a class="nav-link" href="blog.html">Blog</a></li> <!-- No Change as it's in the same folder -->
+                <li class="nav-item"><a class="nav-link" href="../index.html#foot">Links</a></li> <!-- Adjusted Path -->
             </ul>
         </div>
     </div>
-</nav>
 
 <!-- Blog Content -->
 <section class="mt-5 pt-5 blog-content">
