--- a/blogs/Leveraging Large Language Models and Prompt Engineering for Engineering Design.html
+++ b/blogs/Leveraging Large Language Models and Prompt Engineering for Engineering Design.html
@@ -93,23 +93,6 @@
 
 <body>
 
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-    <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="../index.html">HOME</a> <!-- Adjusted Path -->
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="../index.html#about">About</a></li> <!-- Adjusted Path -->
-                <li class="nav-item"><a class="nav-link" href="../index.html#pubs">Publications</a></li> <!-- Adjusted Path -->
-                <li class="nav-item"><a class="nav-link" href="../index.html#projects">Projects</a></li> <!-- Adjusted Path -->
-                <li class="nav-item active"><a class="nav-link" href="blog.html">Blog</a></li> <!-- No Change as it's in the same folder -->
-                <li class="nav-item"><a class="nav-link" href="../index.html#foot">Links</a></li> <!-- Adjusted Path -->
-            </ul>
-        </div>
-    </div>
 
 <!-- Blog Content -->
 <section class="mt-5 pt-5 blog-content">
@@ -143,13 +126,65 @@
         </p>
     </div>
 </section>
+<!-- Like Button Section -->
+<section class="mt-3 container text-center">
+    <button id="likeButton" style="background-color: #222; color: #fff; padding: 10px 15px; border: none; cursor: pointer;">Like</button>
+    <span id="likeCount">0</span> Likes
+</section>
 
+<!-- Comment Section using Disqus -->
+<div class="container mt-5">
+    <div id="disqus_thread"></div>
+    <script>
+        var disqus_config = function () {
+            this.page.url = 'YOUR_PAGE_URL';  // Replace with your page's canonical URL 
+            this.page.identifier = 'YOUR_UNIQUE_IDENTIFIER'; // Replace with a unique identifier for the blog post
+        };
+
+        (function() { 
+            var d = document, s = d.createElement('script');
+            s.src = 'https://YOUR_DISQUS_SUBDOMAIN.disqus.com/embed.js'; // Replace 'YOUR_DISQUS_SUBDOMAIN' with your specific Disqus subdomain.
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+</div>
 
 <footer class="footer">
     <a href="https://scholar.google.com/citations?user=6ZxujUkAAAAJ&hl=en" target="_blank"><i class="fab fa-google"></i></a>
     <a href="https://www.linkedin.com/in/vispi-karkaria" target="_blank"><i class="fab fa-linkedin"></i></a>
     <a href="mailto:vispikarkaria127@gmail.com"><i class="fas fa-envelope"></i></a>
 </footer>
+
+<script>
+    // Time Tracking Script
+    let startTime = new Date().getTime();
+    
+    window.addEventListener('beforeunload', function() {
+        let endTime = new Date().getTime();
+        let timeSpent = (endTime - startTime) / 1000;
+        console.log('User spent', timeSpent, 'seconds on the page.');
+        
+        // You can replace the console.log with an AJAX call to send data to your server.
+    });
+
+    // Like Button Script
+    let likeCount = 0;
+
+    document.getElementById('likeButton').addEventListener('click', function() {
+        likeCount++;
+        document.getElementById('likeCount').innerText = likeCount;
+        this.disabled = true; // Disables the button after one click
+    });
+</script>
+
+<!-- External Scripts -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
+
+
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
