Update Leveraging Large Language Models and Prompt Engineering for Engineering Design.html

--- a/blogs/Leveraging Large Language Models and Prompt Engineering for Engineering Design.html
+++ b/blogs/Leveraging Large Language Models and Prompt Engineering for Engineering Design.html
@@ -127,9 +127,11 @@
 
 <body>
     
-document.getElementById('backButton').addEventListener('click', function() {
-    window.history.back();
-});
+<script>
+    document.getElementById('backButton').addEventListener('click', function() {
+        window.history.back();
+    });
+</script>
 
 <!-- Blog Content -->
 <section class="mt-5 pt-5 blog-content">
