Update Harnessing the Potential of Digital Twins with Machine Learning: Deciphering the Capabilities for the Future.html

--- a/blogs/Harnessing the Potential of Digital Twins with Machine Learning: Deciphering the Capabilities for the Future.html
+++ b/blogs/Harnessing the Potential of Digital Twins with Machine Learning: Deciphering the Capabilities for the Future.html
@@ -138,7 +138,7 @@ document.getElementById('backButton').addEventListener('click', function() {
         <button id="backButton" style="background-color: #222; color: #fff; border: none; padding: 8px 16px; border-radius: 4px; margin-bottom: 15px; cursor: pointer;">Go Back</button>
         
         <h2>Harnessing the Potential of Digital Twins with Machine Learning: Deciphering the Capabilities for the Future</h2>
-        <p class="lead">Published: [Your Date Here] | Author: [Your Author Name Here]</p>
+        <p class="lead">Published: August 21, 2023  | Author: Vispi Nevile Karkaria</p>
 
         <p>
             The rise of the Digital Twin concept, fused with the capabilities of Machine Learning, has started to redefine the boundaries of innovation across sectors. A Digital Twin, when enhanced with ML, not only offers a digital representation of a physical system but also evolves, learns, and predicts its performance in unforeseen scenarios.
