--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
 a        .edu-item h3, .edu-item h4 {
             margin-bottom: .5rem;
         }
+
+        .edu-item h3 {
+            font-size: 1.2rem; /* Adjust this value as per your preference */
+        }
+
         #cv-summary {
             position: sticky;
             top: 0;
