--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@ a        .edu-item h3, .edu-item h4 {
             font-size: 0.85rem; /* Reduce the font size, you can adjust this value */
         }
 
+        #education {
+            margin-bottom: 50px;
+        }
 
     </style>
 </head>
