--- a/index.html
+++ b/index.html
@@ -245,11 +245,12 @@ a        .edu-item h3, .edu-item h4 {
                         </div>
                     </section>
                     <section class="about-section text-center smaller-text" id="projects">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-lg-14 mx-auto">
-                                        <h2 class="mb-4">Projects</h2>
-                                        <div class="edu-item">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-12 mx-auto">
+                                    <h2 class="mb-4">Projects</h2>
+                                    <div class="card edu-item">
+                                        <div class="card-body">
                                             <h3>Development of a Tire Lifespan Predictive Algorithm via Random Forest</h3>
                                             <p><b>2021-2023</b></p>
                                             <p>Algorithms: Random Forest, Gaussian Process Models, Data Balancing Methods</p>
@@ -258,7 +259,9 @@ a        .edu-item h3, .edu-item h4 {
                                                 <li>Introduced the novel Variance Reduction Synthetic Minority Oversampling Technique (VR-SMOTE) for effective data balancing, yielding superior results over conventional and contemporary balancing methods.</li>
                                             </ul>
                                         </div>
-                                        <div class="edu-item">
+                                    </div>
+                                    <div class="card edu-item">
+                                        <div class="card-body">
                                             <h3>Designing LSTM Model for Streamlining Additive Manufacturing Process</h3>
                                             <p><b>2022-2023</b></p>
                                             <p>Algorithms: LSTM, Deep Learning, Big Data</p>
@@ -267,7 +270,9 @@ a        .edu-item h3, .edu-item h4 {
                                                 <li>Developed a comprehensive Big Data management system to efficiently handle the extensive data generated during the process.</li>
                                             </ul>
                                         </div>
-                                        <div class="edu-item">
+                                    </div>
+                                    <div class="card edu-item">
+                                        <div class="card-body">
                                             <h3>Development of Latent-Variable Constrained Bayesian Optimization (LV-CBO)</h3>
                                             <p><b>2022-2023</b></p>
                                             <p>Algorithms: Mixed Variable Optimization, Gaussian Processes, PyTorch</p>
@@ -276,7 +281,9 @@ a        .edu-item h3, .edu-item h4 {
                                                 <li>The LV-CBO algorithm effectively tackled complex optimization challenges faced by Hyundai Motor Company.</li>
                                             </ul>
                                         </div>
-                                        <div class="edu-item">
+                                    </div>
+                                    <div class="card edu-item" style="border-bottom: 1px solid #ccc;">
+                                        <div class="card-body">
                                             <h3>Formulation of Machine Learning Model to Enhance the Lifespan of Super-Capacitors</h3>
                                             <p><b>2020-2023</b></p>
                                             <p>Algorithms: Deep Learning, Gaussian Processes, PyTorch</p>
@@ -288,7 +295,9 @@ a        .edu-item h3, .edu-item h4 {
                                     </div>
                                 </div>
                             </div>
-                        </section>
+                        </div>
+                    </section>
+
                         <section class="about-section text-center smaller-text" id="pubs">
                             <div class="container">
                                 <div class="row">
@@ -313,7 +322,7 @@ a        .edu-item h3, .edu-item h4 {
                                             <p>Turkish Journal of Computer and Mathematics Education (TURCOMAT), vol. 2, Issue. 14, Page. 1600.</p>
                                         </div>                                     
                                         
-                                        <div class="edu-item">
+                                        <div class="card edu-item" style="border-bottom: 1px solid #ccc;">
                                             <h3><b>"Forward Reverse Motion Multi-Cylinder Ball Milling Machine"</b></h3>
                                             <p><b>Authors:</b> Godse, L. S., <span style="font-weight:bold;">Karkaria, V. N.</span>, Bhalerao, M. J., Karandikar, P. B.</p>
                                             <p>Mechanism and Machine Theory, vol. 163, pg. 104292, <a href="https://doi.org/10.1016/j.mechmachtheory.2021.104292">doi:10.1016/j.mechmachtheory.2021.104292</a>.</p>
@@ -363,7 +372,7 @@ a        .edu-item h3, .edu-item h4 {
                                             <p><b>Authors:</b> Karkaria, V. N., Korgaonkar, P. R, Karandikar, P. B.</p>
                                             <p>2017, Conference at Institute of Engineers, Pune, Maharashtra, India, pp. 90-96.</p>
                                         </div>
-                                        <div class="edu-item">
+                                        <div class="card edu-item" style="border-bottom: 1px solid #ccc;">
                                             <h3><b>"Innovative methods of ball milling to grind activated carbon as an electrode material for enhancing the performance of ultracapacitor"</b></h3>
                                             <p><b>Authors:</b> Godse, L. S., Karkaria, V., Karandikar, P. B., Kulkarni, N. R.</p>
                                             <p>International Conference on Energy, Communication, Data Analytics and Soft Computing, ICECDS 2017, pp. 2034–2041, Institute of Electrical and Electronics Engineers Inc, <a href="https://doi.org/10.1109/ICECDS.2017.8389807">doi:10.1109/ICECDS.2017.8389807</a>.</p>
