--- a/blog.html
+++ b/blog.html
@@ -132,6 +132,12 @@
                 <p class="text-muted smaller-text">Published: August 20, 2023</p>
                 <hr>
             </div>
+
+            <div class="blog-item" data-date="2023-08-20">
+                <h3><a href="blogs/Efficient Concurrent Programming with Python's ThreadPoolExecutor and as_completed.html">Efficient Concurrent Programming with Python's ThreadPoolExecutor and as_completed</a></h3>
+                <p class="text-muted smaller-text">Published: August 28, 2023</p>
+                <hr>
+            </div>
         
             <!-- Add more blog items below... -->
         </div>
