Update Efficient Concurrent Programming with Python's ThreadPoolExecutor and as_completed.html

--- a/blogs/Efficient Concurrent Programming with Python's ThreadPoolExecutor and as_completed.html
+++ b/blogs/Efficient Concurrent Programming with Python's ThreadPoolExecutor and as_completed.html
@@ -148,7 +148,7 @@
         <!-- Back Button -->
         <button id="backButton" onclick="goBack()" style="background-color: #222; color: #fff; border: none; padding: 8px 16px; border-radius: 4px; margin-bottom: 15px; cursor: pointer;">Go Back</button>
         function goBack() {
-            window.location.href = "https://www.example.com/your-back-link";
+            window.location.href = "https://vispikarkaria.github.io/blog.html";
         }
 
         <!-- Main Title -->
