--- a/blogs/Harnessing the Potential of Digital Twins with Machine Learning: Deciphering the Capabilities for the Future.html
+++ b/blogs/Harnessing the Potential of Digital Twins with Machine Learning: Deciphering the Capabilities for the Future.html
@@ -135,7 +135,9 @@ document.getElementById('backButton').addEventListener('click', function() {
 <section class="mt-5 pt-5 blog-content">
     <div class="container">
         <!-- Back Button -->
-        <button id="backButton" style="background-color: #222; color: #fff; border: none; padding: 8px 16px; border-radius: 4px; margin-bottom: 15px; cursor: pointer;">Go Back</button>
+         <a href="https://vispikarkaria.github.io/blog.html">
+            <button id="backButton" style="background-color: #222; color: #fff; border: none; padding: 8px 16px; border-radius: 4px; margin-bottom: 15px; cursor: pointer;">Go Back</button>
+        </a>
         
         <h2>Harnessing the Potential of Digital Twins with Machine Learning: Deciphering the Capabilities for the Future</h2>
         <p class="lead">Published: August 21, 2023  | Author: Vispi Nevile Karkaria</p>
