--- a/blog.html
+++ b/blog.html
@@ -122,6 +122,12 @@
         <div class="blog-list mt-4">
             <!-- Example Blog Item (You'd repeat this structure for each blog entry) -->
 
+            <div class="blog-item" data-date="2024-08-07">
+                <h3><a href="blogs/What is a Digital Twin.html">What is a Digital Twin?</a></h3>
+                <p class="text-muted smaller-text">Published: August 7, 2024</p>
+                <hr>
+            </div>
+            
             <div class="blog-item" data-date="2023-08-28">
                 <h3><a href="blogs/Efficient Concurrent Programming with Python's ThreadPoolExecutor and as_completed.html">Efficient Concurrent Programming with Python's ThreadPoolExecutor and as_completed</a></h3>
                 <p class="text-muted smaller-text">Published: August 28, 2023</p>
