--- a/blog.html
+++ b/blog.html
@@ -123,7 +123,7 @@
             <!-- Example Blog Item (You'd repeat this structure for each blog entry) -->
 
             <div class="blog-item" data-date="2024-08-07">
-                <h3><a href="blogs/What is a Digital Twin.html">What is a Digital Twin?</a></h3>
+                <h3><a href="blogs/What is a Digital Twin?">What is a Digital Twin?</a></h3>
                 <p class="text-muted smaller-text">Published: August 7, 2024</p>
                 <hr>
             </div>
