Update What is a Digital Twin.html

--- a/blogs/What is a Digital Twin.html
+++ b/blogs/What is a Digital Twin.html
@@ -147,7 +147,7 @@
             A digital twin is a virtual replica of a physical object, system, or process. This digital counterpart is created using data from the physical entity and advanced simulation techniques, allowing it to mirror the real-world counterpart in real-time. The concept extends beyond mere static models; digital twins are dynamic, continuously updated with data from sensors and other inputs, enabling them to reflect changes, predict outcomes, and optimize performance.
         </p>
         <p>The diagram below illustrates the components and interactions within a digital twin system:</p>
-        <img src="file-G16MHbBegWbXG7qXl4NuZSpQ" alt="Digital Twin Diagram" class="img-fluid mb-3">
+        <img src="blogs/Digital_Twin.gif" alt="Digital Twin Diagram" class="img-fluid mb-3">
 
         <h3>The Components of a Digital Twin</h3>
         <p>1. <strong>Physical System</strong>: This includes the real-world objects or systems being replicated, such as manufacturing equipment, automobiles, and industrial lines.
