Update What is a Digital Twin.html

--- a/blogs/What is a Digital Twin.html
+++ b/blogs/What is a Digital Twin.html
@@ -19,7 +19,8 @@
             height: 100%;
             margin: 0;
             font-family: 'Nunito', sans-serif;
-            color: #fff;
+            background-color: #121212;
+            color: #e0e0e0;
         }
         .masthead {
             background: url('78759.jpg') no-repeat center center;
@@ -33,11 +34,11 @@
             letter-spacing: .1rem;
         }
         .navbar {
-            background-color: #222;
+            background-color: #1f1f1f;
             z-index: 1030; 
         }
         .about-section {
-            background-color: #222;
+            background-color: #1f1f1f;
             padding: 3rem 1.5rem;
         }
         .navbar-dark .navbar-brand:hover, .navbar-dark .nav-link:hover {
@@ -70,19 +71,19 @@
             z-index: 100;
             padding: 20px;
             align-items: center;
-            background: #222;
+            background: #1f1f1f;
         }
 
         .blog-content {
-            color: #000; /* Black color */
+            color: #e0e0e0; /* Light color */
         }
     
         .blog-content h2, .blog-content h3 {
-            color: #000; /* Black color for headings */
+            color: #e0e0e0; /* Light color for headings */
         }
     
         .blog-content p.lead {
-            color: #000; /* Black color for lead paragraph */
+            color: #e0e0e0; /* Light color for lead paragraph */
         }
         /* Added bottom margin to the body to create space for the footer */
         body {
@@ -147,7 +148,10 @@
             A digital twin is a virtual replica of a physical object, system, or process. This digital counterpart is created using data from the physical entity and advanced simulation techniques, allowing it to mirror the real-world counterpart in real-time. The concept extends beyond mere static models; digital twins are dynamic, continuously updated with data from sensors and other inputs, enabling them to reflect changes, predict outcomes, and optimize performance.
         </p>
         <p>The diagram below illustrates the components and interactions within a digital twin system:</p>
-        <img src="https://vispikarkaria.github.io/blogs/Digital_Twin.gif" alt="Digital Twin Diagram" class="img-fluid mb-3">
+        <figure>
+            <img src="https://vispikarkaria.github.io/blogs/Digital_Twin.gif" alt="Digital Twin Diagram" class="img-fluid mb-3">
+            <figcaption class="text-center">Digital Twin Diagram: Integration of Physical and Digital Systems</figcaption>
+        </figure>
 
         <h3>The Components of a Digital Twin</h3>
         <p>1. <strong>Physical System</strong>: This includes the real-world objects or systems being replicated, such as manufacturing equipment, automobiles, and industrial lines.
@@ -230,6 +234,8 @@
         margin: 10px 0;
         border-radius: 4px;
         border: 1px solid #ccc;
+        background-color: #2c2c2c;
+        color: #e0e0e0;
     }
     .comment-form button {
         background-color: #222;
