Update Harnessing the Potential of Digital Twins with Machine Learning: Deciphering the Capabilities for the Future.html

--- a/blogs/Harnessing the Potential of Digital Twins with Machine Learning: Deciphering the Capabilities for the Future.html
+++ b/blogs/Harnessing the Potential of Digital Twins with Machine Learning: Deciphering the Capabilities for the Future.html
@@ -22,7 +22,7 @@
             color: #fff;
         }
         .masthead {
-            background: url('78759.jpg') no-repeat center center;
+            background: url('LLM_Engineering.jpg') no-repeat center center;
             background-size: cover;
             height: 100%;
             text-align: center;
