--- a/blogs/The Impact of Language Models on Engineering: A Technical Analysis.html
+++ b/blogs/The Impact of Language Models on Engineering: A Technical Analysis.html
@@ -22,7 +22,7 @@
             color: #fff;
         }
         .masthead {
-            background: url('78759.jpg') no-repeat center center;
+            background: url('LLM_Engineering.jpg') no-repeat center center;
             background-size: cover;
             height: 100%;
             text-align: center;
