Update The Impact of Language Models on Engineering: A Technical Analysis.html

--- a/blogs/The Impact of Language Models on Engineering: A Technical Analysis.html
+++ b/blogs/The Impact of Language Models on Engineering: A Technical Analysis.html
@@ -152,7 +152,7 @@
         
         <!-- Image of Large Language Model in Engineering -->
         <div class="text-center mb-4">
-            <img src="assets/img/LLM_Engineering.png" alt="Large Language Model in Engineering" style="max-width:100%; height:auto; border-radius: 8px;">
+            <img src="blogs/LLM_Engineering.png" alt="Large Language Model in Engineering" style="max-width:100%; height:auto; border-radius: 8px;">
             <p class="text-muted mt-2">Figure: Visualization of Language Models in Engineering Applications</p>
         </div>
 
