--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ a        .edu-item h3, .edu-item h4 {
                                         <div class="edu-item">
                                             <h3><b>"Digital Twins for the Designs of Systems: a Perspective"</b></h3>
                                             <p><b>Authors:</b> van Beek, A., <span style="font-weight:bold;">Karkaria, V. N.</span>, Chen, W.</p>
-                                            <p>Structural and Multidisciplinary Optimization, <a href="https://arxiv.org/abs/2211.05040">arXiv:2211.05040</a>.</p>
+                                            <p>Structural and Multidisciplinary Optimization, vol. 66, no. 3, 2023, pg. 49. <a href="https://link.springer.com/article/10.1007/s00158-023-03488-x">Link</a>.</p>
                                         </div>
                             
                                         <div class="edu-item">
