Digital Twin Perspective Paper Updated

--- a/index.html
+++ b/index.html
@@ -335,8 +335,9 @@ a        .edu-item h3, .edu-item h4 {
                                         </div>
                                         
                                         <div class="edu-item">
-                                            <h3><b>Digital Twins for the Designs of Systems: a Perspective</b></h3>
-                                            <p><b>Authors:</b> van Beek, A., <span style="font-weight:bold;">Karkaria, V. N.</span>, Chen, W.</p>
+                                            <h3><b>Digital twins for the designs of systems: a perspective</b></h3>
+                                            <p><b>Authors:</b> van Beek, Anton, <span style="font-weight:bold;">Vispi Nevile Karkaria</span>, and Wei Chen.</p>
+                                            <p>Structural and Multidisciplinary Optimization, vol. 66, no. 3, 2023, pp. 49. <a href="https://link.springer.com/article/10.1007/s00158-023-03488-x">Paper Link</a>. </p>
                                         </div>
                                     </div>
                                 </div>
