New Blog of Foundation Model is Added

--- a/blog.html
+++ b/blog.html
@@ -151,6 +151,15 @@
 
         <!-- Blog List -->
         <div class="blog-list mt-4">
+
+
+            <!-- Example Blog Item -->
+            <div class="blog-item" data-date="2025-02-26">
+                <h3><a href="blogs/Scientific Foundation Model.html">Scientific Foundation Model</a></h3>
+                <p class="text-muted smaller-text">Published: February 26, 2025</p>
+                <hr>
+            </div>
+
             <!-- Example Blog Item -->
             <div class="blog-item" data-date="2024-08-07">
                 <h3><a href="blogs/The Impact of Language Models on Engineering: A Technical Analysis">The Impact of Language Models on Engineering: A Technical Analysis</a></h3>
